--- a/index.html
+++ b/index.html
@@ -5,6 +5,66 @@
   <title>Project 1</title>
 </head>
 <body>
-
+  <ul>
+    <li><a href="/index.html">Resume</a></li>
+    <li><a href="/skydiving.html">Skydiving</a></li>
+    <li><a href="/foods.html">Best Foods</a></li>
+  </ul>
+  <h1>Resume - Home Page</h1>
+  <h2>Contact</h2>
+  <ul>
+    <li>Dominik Kulawiak</li>
+    <li>Email: dkulawiak1@hawk.iit.edu</li>
+    <li>Phone #: (312) 401 - 7945</li>
+  </ul>
+  <h2>Summary</h2>
+  <p>Strong willed and motivated college student with the ability to adapt in any situation in a swift and productive manner. Always on the lookout for new opportunities and innovative ideas while managing each efficiently and maintaining its priority. Determined to achieve a career in the field of Computer Science while facing the challenges that come with.</p>
+  <h2>Work Experience</h2>
+  <p><strong></strong></p>
+  <p></p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+  <h3>Event Services</h3>
+  <p><strong></strong></p>
+  <p></p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+  <h3>Customer Service Representative</h3>
+  <p><strong></strong></p>
+  <p></p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+  <h3>Supervisor / Event Helper</h3>
+  <p><strong></strong></p>
+  <p></p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+  <h3>Construction Worker</h3>
+  <p><strong></strong></p>
+  <p></p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+  <h2>Activities and Leadership Experience</h2>
+  <h3>President of Altar Servers</h3>
+  <p><strong>Winter 2015 - Present</strong></p>
+  <p>Managed a group of servers, functioning as their mentor, creating their schedules, and assuring that no one is left behind. Perfected the schedule for each upcoming event to make sure there was enough people for all the jobs required. Serve not only as their leader, but also a friend they can look up to and ask for help.</p>
+  <h3>Tech Coordniator</h3>
+  <p><strong>Fall 2016 - Present</strong></p>
+  <p>Helped an organization get their technical aspect of business created and then keep it up and running. Developed a website, RFID card check in system, and payment system, along with various other technological improvements. Serve as their mentor and technical maintenance to this day.</p>
 </body>
 </html>
