--- a/index.html
+++ b/index.html
@@ -15,49 +15,49 @@
   <ul>
     <li>Dominik Kulawiak</li>
     <li>Email: dkulawiak1@hawk.iit.edu</li>
-    <li>Phone #: (312) 401 - 7945</li>
+    <li>Phone #: (312) 401-7945</li>
   </ul>
   <h2>Summary</h2>
   <p>Strong willed and motivated college student with the ability to adapt in any situation in a swift and productive manner. Always on the lookout for new opportunities and innovative ideas while managing each efficiently and maintaining its priority. Determined to achieve a career in the field of Computer Science while facing the challenges that come with.</p>
   <h2>Work Experience</h2>
-  <p><strong></strong></p>
-  <p></p>
+  <h3>Event Manager at Event Services</h3>
+  <p><strong>Illinois Institute of Technology</strong></p>
+  <p>April 2023 - Present</p>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-  <h3>Event Services</h3>
-  <p><strong></strong></p>
-  <p></p>
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Manage a team of up to 25 produciton crew members.</li>
+    <li>Execute setups and teardowns for events, including furnitute and A/V.</li>
+    <li>Create a list of tasks catered to a specific week as well as the events happening.</li>
   </ul>
   <h3>Customer Service Representative</h3>
-  <p><strong></strong></p>
-  <p></p>
+  <p><strong>Montrose Deli</strong></p>
+  <p>Oct 2021 - Jan 2023</p>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Learned to work with others preferences to develop one cohesive schedule for the team.</li>
+    <li>Called for improvisation while maintaining organization in difficult situations.</li>
+    <li>Learned how to work, manage, and communicate well with a team; learned to run a team.</li>
   </ul>
   <h3>Supervisor / Event Helper</h3>
-  <p><strong></strong></p>
-  <p></p>
+  <p><strong>St. Hyacinth Basilica</strong></p>
+  <p>Summer 2017 - Present</p>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Organized a given setting for weddings, funerals, and various important events.</li>
+    <li>Communicated with clients and listened to their feedback.</li>
+    <li>Supervised each event in case of emergency or other requests.</li>
   </ul>
   <h3>Construction Worker</h3>
-  <p><strong></strong></p>
-  <p></p>
+  <p><strong>MK Construction, Macior Construciton</strong></p>
+  <p>June 2020 - Dec 2021</p>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Expected to get familiar with new surroundings very rapidly while working with a team to adapt to the job.</li>
+    <li>Built and reconstructed various projects based on a simple sketch or blueprint of the job.</li>
+    <li>Communicated with clients and set a plan to make their dreams a reality.</li>
+  </ul>
+  <h2>Education</h2>
+  <h3>Junior at Illinois Institute of Technology</h3>
+  <p><strong>Fall 2021 - Present</strong></p>
+  <ul>
+    <li>Collens Scholar - Merit Based</li>
+    <li>Participated in the Exelon Summer Institute</li>
   </ul>
   <h2>Activities and Leadership Experience</h2>
   <h3>President of Altar Servers</h3>
