--- a/skydiving.html
+++ b/skydiving.html
@@ -10,6 +10,32 @@
     <li><a href="/skydiving.html">Skydiving</a></li>
     <li><a href="/foods.html">Best Foods</a></li>
   </ul>
-  <h1>All About Skydiving</h1>
+  <h1>My Expereince with Skydiving</h1>
+  <h2>Disclaimer</h2>
+  <p></p>
+  <p>Here's a couple <strong>dangers</strong> to consider:</p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+  <h2>Getting Ready</h2>
+  <p></p>
+  <h2>In the Air</h2>
+  <p></p>
+  <h2>Freefalling</h2>
+  <p></p>
+  <img src="" alt="NEED TO CHANGE THIS AND ADD IN AN IMAGE">
+  <p></p>
+  <h2>Parachute Deployment</h2>
+  <p></p>
+  <h2>Landing</h2>
+  <p></p>
+  <p>A few steps for a safe landing include:</p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
 </body>
 </html>
