--- a/foods.html
+++ b/foods.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Project 1</title>
+  <title>Food Expereince - Project 1</title>
 </head>
 <body>
   <ul>
     <li><a href="/index.html">Resume</a></li>
     <li><a href="/skydiving.html">Skydiving</a></li>
-    <li><a href="/foods.html">Best Foods</a></li>
+    <li><a href="/foods.html">Food Expereince</a></li>
   </ul>
-  <h1>Best Foods</h1>
+  <h1>Food Experince</h1>
 </body>
 </html>
