--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Project 1</title>
+  <title>Home Page - Resume - Project 1</title>
 </head>
 <body>
   <ul>
