--- a/skydiving.html
+++ b/skydiving.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Project 1</title>
+  <title>Expereince with Skydiving - Project 1</title>
 </head>
 <body>
   <ul>
     <li><a href="/index.html">Resume</a></li>
     <li><a href="/skydiving.html">Skydiving</a></li>
-    <li><a href="/foods.html">Best Foods</a></li>
+    <li><a href="/foods.html">Food Experince</a></li>
   </ul>
   <h1>My Expereince with Skydiving</h1>
   <h2>Disclaimer</h2>
@@ -25,7 +25,7 @@
   <p></p>
   <h2>Freefalling</h2>
   <p></p>
-  <img src="" alt="NEED TO CHANGE THIS AND ADD IN AN IMAGE">
+  <img src="img/free-falling.jpg" alt="A picture of myself skydiving during the free-falling stage">
   <p></p>
   <h2>Parachute Deployment</h2>
   <p></p>
@@ -37,5 +37,7 @@
     <li></li>
     <li></li>
   </ul>
+  <p>The final position should look like the following:</p>
+  <img src="img/landing.jpg" alt="myself skydiving (on left) with the correct landing positon">
 </body>
 </html>
