Add html skeleton to food page & Embed a video to a Gordon Ramsay video
- first paragraph started

--- a/foods.html
+++ b/foods.html
@@ -11,5 +11,24 @@
     <li><a href="/foods.html">Food Expereince</a></li>
   </ul>
   <h1>Food Experince</h1>
+  <p>Food as well as the process of making it has always been a big part of my intrest and I've enjoyed all forms of it. I like cooking just as much as I love trying new foods and learning about them. Cooking shows were some of my favorites growing up, especially the ones that featured Gordon Ramsey. Even though the shows involved a lot of yelling, it created a new sense of appriciation for how the food is made and the effort that goes into it.</p>
+  <h2>Favorite Foods</h2>
+  <p></p>
+  <ul>
+    <li></li>
+  </ul>
+  <h2>Favorite Desserts</h2>
+  <p></p>
+  <ul>
+    <li></li>
+  </ul>
+  <p></p>
+  <h2>What I like to cook</h2>
+  <p></p>
+  <p></p>
+  <h2>Favorite Cooking Show</h2>
+  <p></p>
+  <p></p>
+  <div><iframe width="560" height="315" src="https://www.youtube.com/embed/BQBvPypinoU?si=-XOagNI9sJuNPXsW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 </body>
 </html>
