--- a/foods.html
+++ b/foods.html
@@ -13,22 +13,27 @@
   <h1>Food Experince</h1>
   <p>Food as well as the process of making it has always been a big part of my intrest and I've enjoyed all forms of it. I like cooking just as much as I love trying new foods and learning about them. Cooking shows were some of my favorites growing up, especially the ones that featured Gordon Ramsey. Even though the shows involved a lot of yelling, it created a new sense of appriciation for how the food is made and the effort that goes into it.</p>
   <h2>Favorite Foods</h2>
-  <p></p>
+  <p>Over time I've come to like the taste of a few foods more than others, some of these foods include:</p>
   <ul>
-    <li></li>
+    <li>A well-made, loaded burger</li>
+    <li>Calamari</li>
+    <li>A well seasoned steak</li>
+    <li>Delicous tacos</li>
   </ul>
   <h2>Favorite Desserts</h2>
-  <p></p>
+  <p>After each good meal, comes a good dessert, here are some of my favorites:</p>
   <ul>
-    <li></li>
+    <li>Sherbet ice cream</li>
+    <li>A waffle loaded with strawberry toppings</li>
+    <li>Tres leches cake</li>
   </ul>
-  <p></p>
+  <p>Dessert is not my favortie category since most of it falls under baking, while I perfer cooking.</p>
   <h2>What I like to cook</h2>
-  <p></p>
-  <p></p>
+  <p>What my favorite foods are, taste wise, differ from what I actually like making when I cook. There are some foods that are more satisfying to make then others and while I might not necessarily be the number one fan of how they taste, I enjoy actually cooking them.</p>
+  <p>One of the foods I really like to cook are breaded chicken fillets that are topped with melted cheese as well as a tomato salsa. It's a food that has always ends up looking great after I make it.</p>
   <h2>Favorite Cooking Show</h2>
-  <p></p>
-  <p></p>
+  <p>Over the years I have watched a few shows that are about cooking and have grown to like some of them more than others. That being said I like to see what other people's ideas are, even if I might not like a specific show.</p>
+  <p>One of my favorites is Gordon Ramsay's Hell's Kitchen show. It is a suspenseful show and many times very exaggerated but it makes for a good way to learn about food, as well as see what it takes to be a resteurant chef. Below is a short clip from one of the episodes.</p>
   <div><iframe width="560" height="315" src="https://www.youtube.com/embed/BQBvPypinoU?si=-XOagNI9sJuNPXsW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 </body>
 </html>
