--- a/foods.html
+++ b/foods.html
@@ -5,11 +5,15 @@
   <title>Food Expereince - Project 1</title>
 </head>
 <body>
-  <ul>
-    <li><a href="/index.html">Resume</a></li>
-    <li><a href="/skydiving.html">Skydiving</a></li>
-    <li><a href="/foods.html">Food Expereince</a></li>
-  </ul>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Resume</a></li>
+        <li><a href="skydiving.html">Skydiving</a></li>
+        <li><a href="foods.html">Best Foods</a></li>
+      </ul>
+    </nav>
+  </header>
   <h1>Food Experince</h1>
   <p>Food as well as the process of making it has always been a big part of my intrest and I've enjoyed all forms of it. I like cooking just as much as I love trying new foods and learning about them. Cooking shows were some of my favorites growing up, especially the ones that featured Gordon Ramsey. Even though the shows involved a lot of yelling, it created a new sense of appriciation for how the food is made and the effort that goes into it.</p>
   <h2>Favorite Foods</h2>
@@ -34,6 +38,8 @@
   <h2>Favorite Cooking Show</h2>
   <p>Over the years I have watched a few shows that are about cooking and have grown to like some of them more than others. That being said I like to see what other people's ideas are, even if I might not like a specific show.</p>
   <p>One of my favorites is Gordon Ramsay's Hell's Kitchen show. It is a suspenseful show and many times very exaggerated but it makes for a good way to learn about food, as well as see what it takes to be a resteurant chef. Below is a short clip from one of the episodes.</p>
-  <div><iframe width="560" height="315" src="https://www.youtube.com/embed/BQBvPypinoU?si=-XOagNI9sJuNPXsW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+  <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/BQBvPypinoU?si=-XOagNI9sJuNPXsW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
 </body>
 </html>
