--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <title>Home Page - Resume - Project 1</title>
 </head>
 <body>
-  <ul>
-    <li><a href="/index.html">Resume</a></li>
-    <li><a href="/skydiving.html">Skydiving</a></li>
-    <li><a href="/foods.html">Best Foods</a></li>
-  </ul>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Resume</a></li>
+        <li><a href="skydiving.html">Skydiving</a></li>
+        <li><a href="foods.html">Best Foods</a></li>
+      </ul>
+    </nav>
+  </header>
   <h1>Resume - Home Page</h1>
   <h2>Contact</h2>
   <ul>
