--- a/skydiving.html
+++ b/skydiving.html
@@ -5,11 +5,15 @@
   <title>Expereince with Skydiving - Project 1</title>
 </head>
 <body>
-  <ul>
-    <li><a href="/index.html">Resume</a></li>
-    <li><a href="/skydiving.html">Skydiving</a></li>
-    <li><a href="/foods.html">Food Experince</a></li>
-  </ul>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Resume</a></li>
+        <li><a href="skydiving.html">Skydiving</a></li>
+        <li><a href="foods.html">Best Foods</a></li>
+      </ul>
+    </nav>
+  </header>
   <h1>My Expereince with Skydiving</h1>
   <h2>Disclaimer</h2>
   <p></p>
@@ -27,7 +31,7 @@
   <p>One you're all hooked up, everyone boards the plane and very shortly you elevate to an altitude of 14,500 feet, from where you jump. The pilot send a signal and the doors open. From thier your assigned instructor walks up to the edge, carrying you, getting ready to jump in a specifc interval. </p>
   <h2>Freefalling</h2>
   <p>Following the jump on the plane is the very first stage of the actual dive. You as well as the instructor will fall almost straight down. It is a really fast fall and a lot of air hits you all at once. It is important to maintain the initial jumping position as mentioned in the instructional video.</p>
-  <img src="img/free-falling.jpg" alt="A picture of myself skydiving during the free-falling stage">
+  <img src="media/free-falling.jpg" alt="A picture of myself skydiving during the free-falling stage">
   <p>The image above portrays the position you are to hold as you and the instructor fall down through the sky.</p>
   <h2>Parachute Deployment</h2>
   <p>Pretty far up in the sky, after freefalling, it becomes time to deploy the parachute. The instructor pulls the parachute deployment string and the parachute forms. For redundancy, there are three parachutes in the case that some of them fail. After deployment, the floating part (calmest part) allows you to take the time to look around you, as you make your way to the ground.</p>
@@ -40,6 +44,6 @@
     <li>Touch the ground when your instructor says it is safe to so.</li>
   </ol>
   <p>The final position should look like the following:</p>
-  <img src="img/landing.jpg" alt="myself skydiving (on left) with the correct landing positon">
+  <img src="media/landing.jpg" alt="myself skydiving (on left) with the correct landing positon">
 </body>
 </html>
