added one more image

--- a/foods.html
+++ b/foods.html
@@ -26,6 +26,7 @@
         <li>A well seasoned steak</li>
         <li>Delicous tacos</li>
       </ul>
+      <img src="media/tacos.jpg" alt="A picture of tacos with carne asada (steak), cilantro, onions">
     </section>
     <section id="fav-desserts">
       <h2>Favorite Desserts</h2>
